--- a/index.html
+++ b/index.html
@@ -135,9 +135,8 @@
         async function measureDownload() {
             const downloadSpeedEl = document.getElementById('downloadSpeed');
             downloadSpeedEl.textContent = '...';
-            const imageUrl = "https://upload.wikimedia.org/wikipedia/commons/3/3f/JPEG_example_flower.jpg";
-            const fileSize = 146000; // Tamaño del archivo en bytes
-
+            const imageUrl = "https://speed.hetzner.de/100MB.bin"; // Archivo de 100 MB
+            const fileSize = 100 * 1024 * 1024; // Tamaño en bytes
             // Medir la velocidad de descarga
             const startDownload = new Date().getTime();
             await fetch(imageUrl, { cache: "no-cache" }).then(response => response.blob());
