--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Test de Velocidad MTM</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
+        /* Estilos CSS */
         body {
             font-family: Arial, sans-serif;
             display: flex;
@@ -73,10 +74,8 @@
 
         <div id="ipInfo"></div> <!-- Aquí se mostrará la IP y otros datos -->
 
-        <!-- Botón para medir velocidad de descarga -->
         <button class="button" onclick="measureDownload()">Iniciar Test</button>
 
-        <!-- Gráfica de progreso -->
         <canvas id="myChart"></canvas>
     </div>
 
@@ -119,7 +118,7 @@
         // Función para obtener la IP y otros datos usando ipinfo.io
         async function getIpInfo() {
             const ipInfoEl = document.getElementById('ipInfo');
-            const response = await fetch('https://ipinfo.io/json?token=27e3b42a8222a1'); // Sustituye YOUR_TOKEN por tu token
+            const response = await fetch('https://ipinfo.io/json?token=YOUR_TOKEN'); // Sustituye YOUR_TOKEN por tu token
             const data = await response.json();
             ipInfoEl.innerHTML = `
                 IP: ${data.ip} <br>
@@ -137,22 +136,19 @@
             downloadSpeedEl.textContent = '...';
             const imageUrl = "https://speed.hetzner.de/100MB.bin"; // Archivo de 100 MB
             const fileSize = 100 * 1024 * 1024; // Tamaño en bytes
-            
-            // Medir la velocidad de descarga
+
             const startDownload = new Date().getTime();
             await fetch(imageUrl, { cache: "no-cache" }).then(response => response.blob());
             const endDownload = new Date().getTime();
             const downloadDuration = (endDownload - startDownload) / 1000; // En segundos
             const maxDownloadSpeed = ((fileSize * 8) / (downloadDuration * 1024 * 1024)).toFixed(2);
 
-            // Progresivamente incrementamos la velocidad de descarga
             let currentDownloadSpeed = 0;
             const downloadInterval = setInterval(() => {
                 if (currentDownloadSpeed < maxDownloadSpeed) {
-                    currentDownloadSpeed += 0.5; // Incremento gradual de velocidad
+                    currentDownloadSpeed += 5; // Incremento más rápido para llegar al valor
                     downloadSpeedEl.innerHTML = `${currentDownloadSpeed.toFixed(2)} <span class="units">Mbps</span>`;
 
-                    // Agregar datos a la gráfica
                     chart.data.labels.push(chart.data.labels.length + 1);
                     chart.data.datasets[0].data.push(currentDownloadSpeed);
                     chart.update();
@@ -160,15 +156,13 @@
                     clearInterval(downloadInterval);
                     downloadSpeedEl.innerHTML = `${maxDownloadSpeed} <span class="units">Mbps</span> (finalizado)`;
                 }
-            }, 50);
+            }, 100); // Intervalo más largo para actualizar datos
         }
 
-        // Llamar a la función para obtener IP y proveedor
         getIpInfo();
     </script>
 </body>
 </html>
-
 
 
 
