--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
             const ipInfoEl = document.getElementById('ipInfo');
             const response = await fetch('https://ipinfo.io/json?token=27e3b42a8222a1'); // Sustituye YOUR_TOKEN por tu token
             const data = await response.json();
-            ipInfoEl.innerHTML = 
+            ipInfoEl.innerHTML = `
                 IP: ${data.ip} <br>
                 Ciudad: ${data.city} <br>
                 País: ${data.country} <br>
                 Región: ${data.region} <br>
                 Código de Área: ${data.postal} <br>
                 Proveedor: ${data.org}
-            ;
+            `;
         }
 
         // Función para medir la velocidad de descarga
@@ -150,7 +150,7 @@
             const downloadInterval = setInterval(() => {
                 if (currentDownloadSpeed < maxDownloadSpeed) {
                     currentDownloadSpeed += 0.5; // Incremento gradual de velocidad
-                    downloadSpeedEl.innerHTML = ${currentDownloadSpeed.toFixed(2)} <span class="units">Mbps</span>;
+                    downloadSpeedEl.innerHTML = `${currentDownloadSpeed.toFixed(2)} <span class="units">Mbps</span>`;
 
                     // Agregar datos a la gráfica
                     chart.data.labels.push(chart.data.labels.length + 1);
@@ -158,7 +158,7 @@
                     chart.update();
                 } else {
                     clearInterval(downloadInterval);
-                    downloadSpeedEl.innerHTML = ${maxDownloadSpeed} <span class="units">Mbps</span> (finalizado);
+                    downloadSpeedEl.innerHTML = `${maxDownloadSpeed} <span class="units">Mbps</span> (finalizado)`;
                 }
             }, 50);
         }
