--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
         async function measureDownload() {
             const downloadSpeedEl = document.getElementById('downloadSpeed');
             downloadSpeedEl.textContent = '...';
-            const imageUrl = "https://speed.hetzner.de/1GB.bin";
-            const fileSize = 100 * 1024 * 1024; // Tamaño del archivo en bytes
+            const imageUrl = "https://stsci-opo.org/STScI-01EVT2C45NSH3P4GTPXYY828KC.tif";
+            const fileSize = 146000; // Tamaño del archivo en bytes
 
             // Medir la velocidad de descarga
             const startDownload = new Date().getTime();
