--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         async function measureDownload() {
             const downloadSpeedEl = document.getElementById('downloadSpeed');
             downloadSpeedEl.textContent = '...';
-            const imageUrl = "https://stsci-opo.org/STScI-01EVT2C45NSH3P4GTPXYY828KC.tif";
+            const imageUrl = "https://raw.githubusercontent.com/molavita/speed/refs/heads/gh-pages/imagen/cosa.jpg";
             const fileSize = 146000; // Tamaño del archivo en bytes
 
             // Medir la velocidad de descarga
