--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         async function measureDownload() {
             const downloadSpeedEl = document.getElementById('downloadSpeed');
             downloadSpeedEl.textContent = '...';
-            const imageUrl = "https://raw.githubusercontent.com/molavita/speed/refs/heads/gh-pages/imagen/cosa.jpg";
+            const imageUrl = "https://speed.hetzner.de/1GB.bin";
             const fileSize = 146000; // Tamaño del archivo en bytes
 
             // Medir la velocidad de descarga
