--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         async function measureDownload() {
             const downloadSpeedEl = document.getElementById('downloadSpeed');
             downloadSpeedEl.textContent = '...';
-            const imageUrl = "https://speed.hetzner.de/100MB.bin"; // Archivo de 100 MB
+            const imageUrl = "https://speed.hetzner.de/1gb.bin"; // Archivo de 100 MB
             const fileSize = 100 * 1024 * 1024; // Tamaño en bytes
             // Medir la velocidad de descarga
             const startDownload = new Date().getTime();
