--- a/index.html
+++ b/index.html
@@ -1,179 +1,40 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/molavita/speed/refs/heads/gh-pages/imagen/speed.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test de Velocidad MTM</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background: linear-gradient(135deg, #6A11CB 0%, #2575FC 100%);
-            color: #fff;
-            text-align: center;
-        }
-        .container {
-            max-width: 500px;
-            padding: 20px;
-            background-color: rgba(0, 0, 0, 0.5);
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-            width: 90%;
-        }
-        .title {
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-        .speed {
-            font-size: 36px;
-            font-weight: bold;
-            margin: 10px 0;
-        }
-        .units {
-            font-size: 18px;
-            font-weight: normal;
-        }
-        .button {
-            background-color: #00aaff;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 8px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background 0.3s;
-            margin: 5px;
-        }
-        .button:hover {
-            background-color: #0077cc;
-        }
-        #myChart {
-            width: 100%;
-            height: 250px;
-            margin-top: 20px;
-        }
-        #ipInfo {
-            margin-top: 15px;
-            font-size: 16px;
-        }
-    </style>
+    <title>Test de Velocidad Personalizado</title>
 </head>
 <body>
-    <div class="container">
-        <div class="title">Test de Velocidad MTM</div>
-
-        <div>Velocidad de descarga</div>
-        <div id="downloadSpeed" class="speed">0 <span class="units">Mbps</span></div>
-
-        <div id="ipInfo"></div> <!-- Aquí se mostrará la IP y otros datos -->
-
-        <!-- Botón para medir velocidad de descarga -->
-        <button class="button" onclick="measureDownload()">Iniciar Test</button>
-
-        <!-- Gráfica de progreso -->
-        <canvas id="myChart"></canvas>
-    </div>
+    <div id="downloadSpeed">Velocidad de descarga: Calculando...</div>
+    <div id="uploadSpeed">Velocidad de subida: Calculando...</div>
+    <button onclick="measureSpeed()">Iniciar Prueba de Velocidad</button>
 
     <script>
-        // Inicializar la gráfica con Chart.js
-        var ctx = document.getElementById('myChart').getContext('2d');
-        var chart = new Chart(ctx, {
-            type: 'line',
-            data: {
-                labels: [], // Etiquetas del tiempo
-                datasets: [{
-                    label: 'Velocidad de Descarga',
-                    borderColor: 'rgb(0, 170, 255)',
-                    data: [],
-                    fill: false
-                }]
-            },
-            options: {
-                responsive: true,
-                scales: {
-                    x: {
-                        type: 'linear',
-                        position: 'bottom',
-                        ticks: {
-                            display: false // Ocultar etiquetas del eje X (tiempo)
-                        }
-                    },
-                    y: {
-                        min: 0,
-                        max: 1000, // Hasta 1000 Mbps (1 Gbps)
-                        title: {
-                            display: true,
-                            text: 'Mbps'
-                        }
-                    }
-                }
-            }
-        });
+        async function measureSpeed() {
+            // Prueba de Descarga
+            const downloadUrl = "https://speed.hetzner.de/1gb.bin"; // URL del archivo de prueba de descarga
+            const downloadStart = performance.now();
+            await fetch(downloadUrl, { cache: "no-cache" }).then(response => response.blob());
+            const downloadEnd = performance.now();
+            const downloadDuration = (downloadEnd - downloadStart) / 1000; // en segundos
+            const downloadSizeMB = 1000; // Tamaño del archivo en MB
+            const downloadSpeed = (downloadSizeMB / downloadDuration).toFixed(2);
+            document.getElementById('downloadSpeed').textContent = `Velocidad de descarga: ${downloadSpeed} Mbps`;
 
-        // Función para obtener la IP y otros datos usando ipinfo.io
-        async function getIpInfo() {
-            const ipInfoEl = document.getElementById('ipInfo');
-            const response = await fetch('https://ipinfo.io/json?token=27e3b42a8222a1'); // Sustituye YOUR_TOKEN por tu token
-            const data = await response.json();
-            ipInfoEl.innerHTML = `
-                IP: ${data.ip} <br>
-                Ciudad: ${data.city} <br>
-                País: ${data.country} <br>
-                Región: ${data.region} <br>
-                Código de Área: ${data.postal} <br>
-                Proveedor: ${data.org}
-            `;
+            // Prueba de Subida
+            const uploadUrl = "https://speed.hetzner.de/1gb.bin"; // URL del endpoint de subida
+            const fileData = new Blob([new ArrayBuffer(1000 * 1024 * 1024)]); // Archivo de 10 MB para subir
+            const uploadStart = performance.now();
+            await fetch(uploadUrl, { method: "POST", body: fileData });
+            const uploadEnd = performance.now();
+            const uploadDuration = (uploadEnd - uploadStart) / 1000;
+            const uploadSpeed = (downloadSizeMB / uploadDuration).toFixed(2);
+            document.getElementById('uploadSpeed').textContent = `Velocidad de subida: ${uploadSpeed} Mbps`;
         }
-
-         // Función para medir la velocidad de descarga
-        async function measureDownload() {
-            const downloadSpeedEl = document.getElementById('downloadSpeed');
-            downloadSpeedEl.textContent = '...';
-
-            const imageUrl = "https://upload.wikimedia.org/wikipedia/commons/3/3f/JPEG_example_flower.jpg"; // Archivo de 10 MB para múltiples descargas
-            const fileSize = 10 * 1024 * 1024; // 10 MB en bytes
-            const repetitions = 50; // Número de veces que descargaremos el archivo
-
-            let totalDownloadDuration = 0;
-
-            for (let i = 0; i < repetitions; i++) {
-                const startDownload = new Date().getTime();
-                await fetch(imageUrl, { cache: "no-cache" }).then(response => response.blob());
-                const endDownload = new Date().getTime();
-
-                totalDownloadDuration += (endDownload - startDownload) / 1000; // Tiempo en segundos
-            }
-
-            // Calcula la velocidad media en Mbps
-            const avgDownloadSpeed = ((fileSize * repetitions * 1) / (totalDownloadDuration * 1024 * 1024)).toFixed(2);
-
-            // Progresivamente incrementamos la velocidad de descarga en pantalla y en la gráfica
-            let currentDownloadSpeed = 0;
-            const downloadInterval = setInterval(() => {
-                if (currentDownloadSpeed < avgDownloadSpeed) {
-                    currentDownloadSpeed += 10; // Incremento gradual de velocidad
-                    downloadSpeedEl.innerHTML = `${currentDownloadSpeed.toFixed(2)} <span class="units">Mbps</span>`;
-                    chart.data.labels.push(chart.data.labels.length + 1);
-                    chart.data.datasets[0].data.push(currentDownloadSpeed);
-                    chart.update();
-                } else {
-                    clearInterval(downloadInterval);
-                    downloadSpeedEl.innerHTML = `${avgDownloadSpeed} <span class="units">Mbps</span> (finalizado)`;
-                }
-            }, 50);
-        }
-
-        // Llamar a la función para obtener IP y proveedor
-        getIpInfo();
     </script>
 </body>
 </html>
+
 
 
 
