--- a/index.html
+++ b/index.html
@@ -110,16 +110,20 @@
 
         async function getIpInfo() {
             const ipInfoEl = document.getElementById('ipInfo');
-            const response = await fetch('https://ipinfo.io/json?token=27e3b42a8222a1');
-            const data = await response.json();
-            ipInfoEl.innerHTML = `
-                IP: ${data.ip} <br>
-                Ciudad: ${data.city} <br>
-                País: ${data.country} <br>
-                Región: ${data.region} <br>
-                Código de Área: ${data.postal} <br>
-                Proveedor: ${data.org}
-            `;
+            try {
+                const response = await fetch('https://ipinfo.io/json?token=27e3b42a8222a1');
+                const data = await response.json();
+                ipInfoEl.innerHTML = `
+                    IP: ${data.ip} <br>
+                    Ciudad: ${data.city} <br>
+                    País: ${data.country} <br>
+                    Región: ${data.region} <br>
+                    Código de Área: ${data.postal} <br>
+                    Proveedor: ${data.org}
+                `;
+            } catch (error) {
+                ipInfoEl.innerHTML = "Error al obtener la información de la IP";
+            }
         }
 
         async function measureDownload() {
@@ -129,26 +133,36 @@
             const imageUrl = "https://speed.hetzner.de/100MB.bin"; // Archivo grande para mejor precisión
             const fileSize = 100 * 1024 * 1024; // 100 MB en bytes
 
-            const startDownload = new Date().getTime();
-            await fetch(imageUrl, { cache: "no-cache" }).then(response => response.blob());
-            const endDownload = new Date().getTime();
+            try {
+                const startDownload = new Date().getTime();
+                const response = await fetch(imageUrl, { cache: "no-cache" });
 
-            const downloadDuration = (endDownload - startDownload) / 1000; // Tiempo en segundos
-            const downloadSpeed = ((fileSize * 8) / (downloadDuration * 1024 * 1024)).toFixed(2); // Mbps
+                // Verifica si la descarga fue exitosa
+                if (!response.ok) throw new Error("Error en la descarga del archivo");
 
-            let currentDownloadSpeed = 0;
-            const downloadInterval = setInterval(() => {
-                if (currentDownloadSpeed < downloadSpeed) {
-                    currentDownloadSpeed += 0.5;
-                    downloadSpeedEl.innerHTML = `${currentDownloadSpeed.toFixed(2)} <span class="units">Mbps</span>`;
-                    chart.data.labels.push(chart.data.labels.length + 1);
-                    chart.data.datasets[0].data.push(currentDownloadSpeed);
-                    chart.update();
-                } else {
-                    clearInterval(downloadInterval);
-                    downloadSpeedEl.innerHTML = `${downloadSpeed} <span class="units">Mbps</span> (finalizado)`;
-                }
-            }, 50);
+                await response.blob();
+                const endDownload = new Date().getTime();
+
+                const downloadDuration = (endDownload - startDownload) / 1000; // Tiempo en segundos
+                const downloadSpeed = ((fileSize * 8) / (downloadDuration * 1024 * 1024)).toFixed(2); // Mbps
+
+                let currentDownloadSpeed = 0;
+                const downloadInterval = setInterval(() => {
+                    if (currentDownloadSpeed < downloadSpeed) {
+                        currentDownloadSpeed += 0.5;
+                        downloadSpeedEl.innerHTML = `${currentDownloadSpeed.toFixed(2)} <span class="units">Mbps</span>`;
+                        chart.data.labels.push(chart.data.labels.length + 1);
+                        chart.data.datasets[0].data.push(currentDownloadSpeed);
+                        chart.update();
+                    } else {
+                        clearInterval(downloadInterval);
+                        downloadSpeedEl.innerHTML = `${downloadSpeed} <span class="units">Mbps</span> (finalizado)`;
+                    }
+                }, 50);
+            } catch (error) {
+                downloadSpeedEl.innerHTML = "Error en la prueba de velocidad";
+                console.error("Error en la descarga:", error);
+            }
         }
 
         getIpInfo();
