--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             const downloadSpeedEl = document.getElementById('downloadSpeed');
             downloadSpeedEl.textContent = '...';
 
-            const imageUrl = "https://speed.hetzner.de/10MB.bin"; // Archivo de prueba (10 MB)
+            const imageUrl = "https://upload.wikimedia.org/wikipedia/commons/3/3f/JPEG_example_flower.jpg"; // Archivo de prueba (10 MB)
             const fileSize = 10 * 1024 * 1024; // 10 MB en bytes
 
             try {
