--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="es">
 <head>
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/molavita/speed/refs/heads/gh-pages/imagen/speed.png">
@@ -67,20 +67,26 @@
 <body>
     <div class="container">
         <div class="title">Test de Velocidad MTM</div>
+
         <div>Velocidad de descarga</div>
         <div id="downloadSpeed" class="speed">0 <span class="units">Mbps</span></div>
-        <div id="ipInfo"></div>
 
+        <div id="ipInfo"></div> <!-- Aquí se mostrará la IP y otros datos -->
+
+        <!-- Botón para medir velocidad de descarga -->
         <button class="button" onclick="measureDownload()">Iniciar Test</button>
+
+        <!-- Gráfica de progreso -->
         <canvas id="myChart"></canvas>
     </div>
 
     <script>
+        // Inicializar la gráfica con Chart.js
         var ctx = document.getElementById('myChart').getContext('2d');
         var chart = new Chart(ctx, {
             type: 'line',
             data: {
-                labels: [],
+                labels: [], // Etiquetas del tiempo
                 datasets: [{
                     label: 'Velocidad de Descarga',
                     borderColor: 'rgb(0, 170, 255)',
@@ -94,11 +100,13 @@
                     x: {
                         type: 'linear',
                         position: 'bottom',
-                        ticks: { display: false }
+                        ticks: {
+                            display: false // Ocultar etiquetas del eje X (tiempo)
+                        }
                     },
                     y: {
                         min: 0,
-                        max: 100,
+                        max: 1000, // Hasta 1000 Mbps (1 Gbps)
                         title: {
                             display: true,
                             text: 'Mbps'
@@ -108,63 +116,60 @@
             }
         });
 
+        // Función para obtener la IP y otros datos usando ipinfo.io
         async function getIpInfo() {
             const ipInfoEl = document.getElementById('ipInfo');
-            try {
-                const response = await fetch('https://ipinfo.io/json?token=27e3b42a8222a1');
-                const data = await response.json();
-                ipInfoEl.innerHTML = `
-                    IP: ${data.ip} <br>
-                    Ciudad: ${data.city} <br>
-                    País: ${data.country} <br>
-                    Región: ${data.region} <br>
-                    Código de Área: ${data.postal} <br>
-                    Proveedor: ${data.org}
-                `;
-            } catch (error) {
-                ipInfoEl.innerHTML = "Error al obtener la información de la IP";
-            }
+            const response = await fetch('https://ipinfo.io/json?token=27e3b42a8222a1'); // Sustituye YOUR_TOKEN por tu token
+            const data = await response.json();
+            ipInfoEl.innerHTML = `
+                IP: ${data.ip} <br>
+                Ciudad: ${data.city} <br>
+                País: ${data.country} <br>
+                Región: ${data.region} <br>
+                Código de Área: ${data.postal} <br>
+                Proveedor: ${data.org}
+            `;
         }
 
+         // Función para medir la velocidad de descarga
         async function measureDownload() {
             const downloadSpeedEl = document.getElementById('downloadSpeed');
             downloadSpeedEl.textContent = '...';
 
-            const imageUrl = "https://upload.wikimedia.org/wikipedia/commons/3/3f/JPEG_example_flower.jpg"; // Archivo de prueba (10 MB)
+            const imageUrl = "https://upload.wikimedia.org/wikipedia/commons/3/3f/JPEG_example_flower.jpg"; // Archivo de 10 MB para múltiples descargas
             const fileSize = 10 * 1024 * 1024; // 10 MB en bytes
+            const repetitions = 1000; // Número de veces que descargaremos el archivo
 
-            try {
+            let totalDownloadDuration = 0;
+
+            for (let i = 0; i < repetitions; i++) {
                 const startDownload = new Date().getTime();
-                const response = await fetch(imageUrl, { cache: "no-cache" });
-
-                // Verifica si la descarga fue exitosa
-                if (!response.ok) throw new Error("Error en la descarga del archivo");
-
-                await response.blob();
+                await fetch(imageUrl, { cache: "no-cache" }).then(response => response.blob());
                 const endDownload = new Date().getTime();
 
-                const downloadDuration = (endDownload - startDownload) / 1000; // Tiempo en segundos
-                const downloadSpeed = ((fileSize * 1) / (downloadDuration * 1024 * 1024)).toFixed(2); // Mbps
-
-                let currentDownloadSpeed = 0;
-                const downloadInterval = setInterval(() => {
-                    if (currentDownloadSpeed < downloadSpeed) {
-                        currentDownloadSpeed += 0.5;
-                        downloadSpeedEl.innerHTML = `${currentDownloadSpeed.toFixed(2)} <span class="units">Mbps</span>`;
-                        chart.data.labels.push(chart.data.labels.length + 1);
-                        chart.data.datasets[0].data.push(currentDownloadSpeed);
-                        chart.update();
-                    } else {
-                        clearInterval(downloadInterval);
-                        downloadSpeedEl.innerHTML = `${downloadSpeed} <span class="units">Mbps</span> (finalizado)`;
-                    }
-                }, 50);
-            } catch (error) {
-                downloadSpeedEl.innerHTML = "Error en la prueba de velocidad. Verifica el archivo de prueba y la conexión de red.";
-                console.error("Error en la descarga:", error);
+                totalDownloadDuration += (endDownload - startDownload) / 1000; // Tiempo en segundos
             }
+
+            // Calcula la velocidad media en Mbps
+            const avgDownloadSpeed = ((fileSize * repetitions * 1) / (totalDownloadDuration * 1024 * 1024)).toFixed(2);
+
+            // Progresivamente incrementamos la velocidad de descarga en pantalla y en la gráfica
+            let currentDownloadSpeed = 0;
+            const downloadInterval = setInterval(() => {
+                if (currentDownloadSpeed < avgDownloadSpeed) {
+                    currentDownloadSpeed += 10; // Incremento gradual de velocidad
+                    downloadSpeedEl.innerHTML = `${currentDownloadSpeed.toFixed(2)} <span class="units">Mbps</span>`;
+                    chart.data.labels.push(chart.data.labels.length + 1);
+                    chart.data.datasets[0].data.push(currentDownloadSpeed);
+                    chart.update();
+                } else {
+                    clearInterval(downloadInterval);
+                    downloadSpeedEl.innerHTML = `${avgDownloadSpeed} <span class="units">Mbps</span> (finalizado)`;
+                }
+            }, 50);
         }
 
+        // Llamar a la función para obtener IP y proveedor
         getIpInfo();
     </script>
 </body>
