--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         // Función para obtener la IP y otros datos usando ipinfo.io
         async function getIpInfo() {
             const ipInfoEl = document.getElementById('ipInfo');
-            const response = await fetch('https://ipinfo.io/json?token=27e3b42a8222a1'); // Sustituye YOUR_TOKEN por tu token
+            const response = await fetch('https://ipinfo.io/json?token=27e3b42a8222a1'); // token
             const data = await response.json();
             ipInfoEl.innerHTML = `
                 IP: ${data.ip} <br>
