--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       options: {
         animation: false,
         scales: {
-          x: { title: { display: true, text: 'Prueba #' } },
+          x: { title: { display: false } },  // 🔹 Título del eje X quitado
           y: { min: 0, title: { display: true, text: 'Mbps' } }
         }
       }
@@ -130,7 +130,7 @@
       }
 
       const avgSpeed = (speeds.reduce((a,b)=>a+b,0)/speeds.length).toFixed(2);
-      downloadSpeedEl.innerHTML = `${avgSpeed} <span class="units">Mbps</span> (promedio)`;
+      downloadSpeedEl.innerHTML = `${avgSpeed} <span class="units">Mbps</span>`; // 🔹 Sin "(promedio)"
       startBtn.disabled = false;
       startBtn.textContent = "Iniciar Test";
     }
@@ -140,9 +140,6 @@
   </script>
 </body>
 </html>
-
-
-
 
 
 
